--- a/index.html
+++ b/index.html
@@ -12,45 +12,45 @@
     </head>
     <body>
         <div class="container">
-            <div class="jumbotron border border-primary mb-4">
+            <div class="jumbotron border border-info mb-4 bg-dark text-white">
                 <div class="container">
                     <h1 class="display-4 text-center">Trains, Trains, Trains!</h1>
                     <p class="lead text-center">I get a Train, You get a Train, Everyone gets a Train!</p>
                 </div>
             </div>  
 
-            <div class="border border-primary bg-primary text-white p-2 rounded-top">
+            <div class="border border-info bg-info text-white p-2 rounded-top">
                     <lable>Current Train Schedule</lable>
             </div>
-            <div class="rounded-bottom border border-primary mb-4 p-2" id="info">
+            <div class="rounded-bottom border border-info mb-4 p-2 bg-dark text white" id="info">
             </div>
 
-            <div class="border border-primary bg-primary text-white p-2 rounded-top">
+            <div class="border border-info bg-info text-white p-2 rounded-top">
                 <lable>Add Train</lable>
             </div>
-            <form class="border border-primary p-2 rounded-bottom mb-4">
+            <form class="border border-info bg-dark p-2 rounded-bottom mb-4">
                     
                     <div class="form-group">
-                      <label for="name">Train Name</label>
-                      <input type="text" class="form-control" id="name">
+                      <label class="text-white" for="name">Train Name</label>
+                      <input type="text" class="form-control border border-info" id="name">
                     </div>
 
                     <div class="form-group">
-                        <label for="destination">Destination</label>
-                        <input type="text" class="form-control" id="destination">
+                        <label class="text-white for="destination">Destination</label>
+                        <input type="text" class="form-control border border-info" id="destination">
                     </div>
 
                     <div class="form-group">
-                        <label for="firstTime">First Train Time (HH:mm - Military Time)</label>
-                        <input type="text" class="form-control" id="firstTime">
+                        <label class="text-white" for="firstTime">First Train Time (HH:mm - Military Time)</label>
+                        <input type="text" class="form-control border border-info" id="firstTime">
                     </div>
 
                     <div class="form-group">
-                        <label for="freq">Freqency (min)</label>
-                        <input type="text" class="form-control" id="freq">
+                        <label class="text-white rounded" for="freq">Freqency (min)</label>
+                        <input type="text" class="form-control border border-info" id="freq">
                     </div>
 
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-info">Submit</button>
                 </form>
             
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
