--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>  
 
             <div class="border border-info bg-info text-white p-2 rounded-top">
-                    <lable class="">Train Schedule</lable>
+                    <lable class="">Train Schedule (Times Update Every 60 seconds)</lable>
                     <lable class="float-right" id="showTime"></lable>
             </div>
             <div class="rounded-bottom border border-info mb-4 p-2 bg-dark text-white" id="info">
